// Clase: Sokoban

// Clase principal del juego
public class Sokoban {
    public static void main(String[] args) {
        Juego juego = new Juego();
        juego.iniciar();
    }
}